# Simple-Web-App

./: Jenkinsfile  README.md  main.py  pyproject.toml
k8s/manifests/: deployment.yaml  ingress.yaml  service.yaml
k8s/simple-webapp-helm/: Chart.yaml
k8s/simple-webapp-helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml
manifests/: deployment.yaml  ingress.yaml  service.yaml
simple-webapp-helm/: values.yaml
simple-webapp-helm/templates/: NOTES.txt  deployment.yaml  service.yaml
simple-webapp-helm/templates/tests/: test-connection.yaml
