[tool.poetry]
name = "my-flask-app"
authors = ["Hasan Karademir"]
version = "0.1.0"
description = "A minimal Flask application"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
# Diğer bağımlılıklarınızı buraya ekleyin

[tool.poetry.dev-dependencies]
# Geliştirme zamanı bağımlılıkları buraya ekleyin (opsiyonel)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
